resizing of images responsive to device

--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -10,9 +10,13 @@
             <div class="row">
                 <!-- LEFT -->
                 <div class="col-md-9">
-                    <img class="float-left" src="/static/img/Funds-Management.png" height="250" width="178" alt="57%" />
-                    <div class="heading-title">
+                    <img class="hidden-xs-down float-left" src="/static/img/Funds-Management.png" height="250" width="178" alt="57%" />
+                    <img class="hidden-sm-up float-left" src="/static/img/Funds-Management.png" height="104" width="76" alt="57%" />
+                    <div class="hidden-xs-down heading-title">
                         <h2>Fund Management</h2>
+                    </div>
+                    <div class="hidden-sm-up heading-title">
+                        <h3>Fund Management</h3>
                     </div>
                     <p>
                         We offer our clients access to different investment opportunities that attempt to maximize their
