--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -5,7 +5,7 @@
         <div id="rev_slider_72_1" class="rev_slider fullscreenbanner hide" data-version="5.0.7">
             <ul>
                 <!-- SLIDE  -->
-                <li data-index="rs-227" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Purchase Smarty" data-description="">
+                <li data-index="rs-227" data-transition="slotfade-horizontal" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-rotate="0"  data-saveperformance="off"  data-title="Purchase Smarty" data-description="">
                     <!-- MAIN IMAGE -->
                     <img src="/static/img/rev_slider/home.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
@@ -97,7 +97,7 @@
 {#                    </div>#}
                 </li>
                 <!-- SLIDE  -->
-                <li data-index="rs-228" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500" data-thumb="assets/images/_smarty/rs5/express_bglight-100x50.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="Intro" data-description="">
+                <li data-index="rs-228" data-transition="slotfade-horizontal" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default" data-rotate="0"  data-saveperformance="off"  data-title="Intro" data-description="">
                     <!-- MAIN IMAGE -->
                     <img src="/static/img/rev_slider/inform.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
@@ -192,7 +192,7 @@
                 </li>
 
                 <!-- SLIDE  -->
-                <li data-index="rs-229" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Examples" data-description="">
+                <li data-index="rs-229" data-transition="slotfade-horizontal" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-rotate="0"  data-saveperformance="off"  data-title="Examples" data-description="">
                     <!-- MAIN IMAGE -->
                     <img src="/static/img/rev_slider/advise.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
@@ -257,7 +257,7 @@
                         data-responsive_offset="on"
 
                         style="z-index: 8; white-space: nowrap;letter-spacing:2px;font-weight:500;">
-                        We navigate the complex Tanzanian ﬁnancial markets so that our clients can extract
+                        We navigate the complex Tanzanian financial markets so that our clients can extract
                         long term value ...
                     </div>
 
@@ -286,9 +286,9 @@
                 </li>
 
                 <!-- SLIDE  -->
-                <li data-index="rs-230" data-transition="slidevertical" data-slotamount="1"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Easy to Use" data-description="">
+                <li data-index="rs-230" data-transition="slotfade-horizontal" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-rotate="0"  data-saveperformance="off"  data-title="Easy to Use" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="/static/img/rev_slider/execute.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    <img src="/static/img/rev_slider/execute.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
                     <!-- LAYERS -->
 
                     <div class="tp-caption WebProduct-Title   tp-resizeme"
@@ -351,7 +351,7 @@
 
                         style="z-index: 8; white-space: nowrap;letter-spacing:2px;font-weight:500;">
                         Across various asset classes we execute orders by seeking out liquidity in a
-                        transparent and affordable manner.
+                        transparent and affordable manner ...
                     </div>
 
 {#                    <div class="tp-caption WebProduct-Button rev-btn "#}
@@ -604,7 +604,7 @@
                         </header>
                         <p>Financial Investment Management Company dedicated to assisting our clients to invest more transparently, competitively and affordably.</p>
                         <p>This assistance we offer via relevant information, advisory and execution capabilities is underpinned by the deep understanding of local market dynamics and commitment to our core values of Diligence, Integrity and Innovation in all we do.</p>
-                        <p>We are looking to introduce local and foreign investors to the Tanzanian Financial markets opportunities, and indeed vice versa. We do so leveraging years of experience working with international banks in Tanzanian and a rich track record of engaging with clients and regulators alike.</p>
+                        <p><img class="hidden-sm-up float-right" src="/static/img/welcome.jpg" width="200" height="247" alt="" />We are looking to introduce local and foreign investors to the Tanzanian Financial markets opportunities, and indeed vice versa. We do so leveraging years of experience working with international banks in Tanzanian and a rich track record of engaging with clients and regulators alike.</p>
                         <p>Whether it’s to buy, sell or hold, whether it’s to invest, disinvest or hold; we work hard to give our clients sufficient confidence to make this decision across various asset classes in our financial markets in a way that creates lasting long term value for them.</p>
                         <hr />
 
@@ -618,7 +618,7 @@
                                 "navigation": true
                                 "pagination": true
                         -->
-                        <div class="text-center mt-30">
+{#                        <div class="text-center mt-30">#}
 {#                            <div class="owl-carousel m-0" data-plugin-options='{"navigation": false, "pagination": false, "singleItem": false, "autoPlay": 3400, "items":"3"}'>#}
 {#                                <div>#}
 {#                                    <img class="img-fluid" src="/static/img/brands/1.jpg" alt="">#}
@@ -645,10 +645,10 @@
 {#                                    <img class="img-fluid" src="/static/img/brands/8.jpg" alt="">#}
 {#                                </div>#}
 {#                            </div>#}
-                        </div>
+{#                        </div>#}
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="hidden-xs-down col-sm-6">
 
                         <!--
                             controlls-over		= navigation buttons over the image
