--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -117,9 +117,9 @@
                                             <b class="tooltip tooltip-bottom-right">Enter your corporate account number</b>
                                         </label>
                                         <!-- Identification -->
-                                        <label>Email/Phone</label>
+                                        <label>Email Address</label>
                                         <label class="input mb-10">
-                                            <i class="ico-append fa fa-user"></i>
+                                            <i class="ico-append fa fa-envelope"></i>
                                             {{ cForm.corp_rep }}
                                             <b class="tooltip tooltip-bottom-right">Needed to verify your account</b>
                                         </label>
