--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -6,7 +6,9 @@
     <section id="middle">
         <!-- page title -->
         <header id="page-header" class="text-center">
-            <h1>You may use any of the following methods to deposit money into POCHI</h1>
+            <h1 style="color: black; font-weight: 600">
+                <strong>You may use any of the following methods to deposit money into POCHI</strong>
+            </h1>
         </header>
         <!-- /page title -->
         <div id="content" class="padding-20">
@@ -22,12 +24,16 @@
                                 Bank Transfer Form at your bank.</strong>
                         </h4>
 					</div>
-                    <div>
-                        <h5>Bank 1:</h5>
-                        <p>Reference: Your POCHI ID/Mobile Number</p>
-                        <h5>Bank 2:</h5>
-                        <p>Reference: Your POCHI ID/Mobile Number</p>
-                    </div>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h5>Bank 1:</h5>
+                            <p>Reference: Your POCHI ID/Mobile Number</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5>Bank 2:</h5>
+                            <p>Reference: Your POCHI ID/Mobile Number</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -43,14 +49,16 @@
                             POCHI ID and Mobile Number in the Bank Transfer Form at your bank.</strong>
                         </h4>
 					</div>
-                    <div>
-                        <div>
+                    <ul class="list-group">
+                        <li class="list-group-item">
                             <h5>Bank 1:</h5>
                             <p>Reference: Your POCHI ID/Mobile Number</p>
+                        </li>
+                        <li class="list-group-item">
                             <h5>Bank 2:</h5>
                             <p>Reference: Your POCHI ID/Mobile Number</p>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
