--- a/fimco/pochi/templates/pochi/indemnity_form_template.html
+++ b/fimco/pochi/templates/pochi/indemnity_form_template.html
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {#{% block page_header %}#}
-{#    <img src="/home/ubuntu/site/FIMCO/fimco/static/img/POCHI.png" width="200" height="200" />#}
+{#    <img src="../../../fimcosite/static/img/POCHI.png" />#}
 {#{% endblock %}#}
 
 {% block content %}
