--- a/fimco/pochi/templates/pochi/create_group.html
+++ b/fimco/pochi/templates/pochi/create_group.html
@@ -53,8 +53,15 @@
                                         <h4>Add Members</h4>
                                         <fieldset>
                                             <div class="form-group">
+                                                <label class="col-xs-3 control-label">Group admin</label>
+                                                <div class="col-xs-6">
+                                                    <input type="text" id="member" class="form-control"
+                                                           value="{{ phone }}" disabled title="Admin"/>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
                                                 <label class="col-xs-3 control-label">Member</label>
-                                                <div class="col-xs-5">
+                                                <div class="col-xs-6">
                                                     <input type="text" id="member" class="form-control member masked"
                                                            name="option[]"
                                                            title=""
@@ -62,8 +69,17 @@
                                                            data-placeholder="X"
                                                            placeholder="Phone number"/>
                                                 </div>
-                                                <div class="col-xs-4">
-                                                    <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
+                                                <div class="col-xs-3">
+                                                    <button type="button" class="btn btn-default">
+                                                        <i class="fa fa-check text-success"></i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix row">
+                                                <div class="offset-lg-3 offset-md-3 offset-xs-3 col-xs-6">
+                                                    <button type="button" class="btn btn-default addButton">
+                                                        <i class="fa fa-plus"></i>
+                                                    </button>
                                                 </div>
                                             </div>
 
@@ -92,16 +108,16 @@
                                                 </div>
                                             </div>
 
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div id="second-admin" class="fancy-form fancy-form-select" style="display: none">
-                                                        <select class="form-control" id="admin" name="admin" title="admin">
-                                                            <option value="">Select second admin</option>
-                                                        </select>
-                                                        <i class="fancy-arrow"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
+{#                                            <div class="row">#}
+{#                                                <div class="col-md-6">#}
+{#                                                    <div id="second-admin" class="fancy-form fancy-form-select" style="display: none">#}
+{#                                                        <select class="form-control" id="admin" name="admin" title="admin">#}
+{#                                                            <option value="">Select second admin</option>#}
+{#                                                        </select>#}
+{#                                                        <i class="fancy-arrow"></i>#}
+{#                                                    </div>#}
+{#                                                </div>#}
+{#                                            </div>#}
                                         </fieldset>
 
                                         <hr />
