--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -80,12 +80,12 @@
                                             WHO WE ARE
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="{% url 'site' 'about' %}#about">About Us</a></li>
+                                            <li><a href="{% url 'site' 'about' %}">About Us</a></li>
+                                            <li class="divider"></li>
                                             <li><a href="{% url 'site' 'about' %}#values">Our values</a></li>
                                             <li><a href="{% url 'site' 'about' %}#mission">Our mission</a></li>
                                             <li><a href="{% url 'site' 'about' %}#vision">Our vision</a></li>
                                             <li><a href="{% url 'site' 'about' %}#founders">Our founders</a></li>
-                                            <li class="divider"></li>
                                             <li><a href="{% url 'site' 'about' %}#approach">Our Investment Approach</a></li>
                                         </ul>
                                     </li>
