--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -95,7 +95,7 @@ ul.process-steps li a.active, ul.process-steps li a.active:focus, ul.process-ste
     /*}*/
 /*}*/
 
-@media only screen and (min-width: 640px) and (orientation: landscape) {
+@media only screen and (orientation: landscape) {
     .tp-static-layers {
         display: none;
     }
@@ -113,6 +113,22 @@ ul.process-steps li a.active, ul.process-steps li a.active:focus, ul.process-ste
         min-width: 448px!important;
     }
 }
+
+/*@media only screen and (min-width: 640px) and (orientation: landscape) {*/
+    /*.tp-parallax-wrap {*/
+        /*left: 20%!important;*/
+    /*}*/
+    /*.WebProduct-Title {*/
+        /*line-height: 32px!important;*/
+        /*font-weight: 100!important;*/
+        /*font-size: 30px!important;*/
+        /*top: -40px;*/
+    /*}*/
+    /*.WebProduct-Content {*/
+        /*margin-top: 40px!important;*/
+        /*min-width: 448px!important;*/
+    /*}*/
+/*}*/
 
 @media only screen and (max-width: 768px) {
     .WebProduct-SubTitle {
