slider update to masterslider

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <!-- LEFT -->
-                <div class="col-md-9">
+                <div class="col-lg-9 col-md-8">
                     <img src="/static/img/about-us.jpg" width="100%" alt="" />
                     <div class="heading-title" id="about">
                         <h2>About Us</h2>
@@ -61,7 +61,7 @@
                 <!-- /LEFT -->
 
                 <!-- RIGHT -->
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4">
 
                     <div class="box-static box-border-top mb-60">
                         <div class="box-title">
@@ -96,7 +96,7 @@
                         </ul>
                         <hr />
                     </div>
-                    <hr />
+{#                    <hr />#}
                     <!-- SOCIAL ICONS -->
 {#                    <div class="hidden-xs-down text-center">#}
 {#                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">#}
