--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -127,7 +127,7 @@
 				<div class="copyright">
 					<div class="container">
                         <div class="row">
-                            <div class="col-md-2 col-sm-4">
+                            <div class="col-lg-2 col-md-3 col-sm-4">
                                 <!-- Footer Logo -->
 							    <img class="footer-logo footer-2" src="/static/img/fimco-footer.png" alt="" />
                             </div>
@@ -141,11 +141,11 @@
 {#                                FIMCO Limited is an authorised financial services provider<br>#}
 {#                                licensed by the Capital Market Security Authority.#}
 {#                            </div>#}
-                            <div class="col-md-5 col-sm-5">
-                                FIMCO Limited is an authorised financial services provider<br>
+                            <div class="col-lg-6 col-md-5 col-sm-5">
+                                FIMCO Limited is an authorised financial services provider
                                 licensed by the Capital Market Security Authority.
                             </div>
-                            <div class="col-md-5 col-sm-3">
+                            <div class="col-lg-4 col-md-4 col-sm-3">
 {#                                <ul class="float-right m-0 list-inline mobile-block">#}
 {#                                    <li><a href="{% url 'site' 'terms' %}">Terms &amp; Conditions</a></li>#}
 {#                                    <li>&bull;</li>#}
