--- a/fimco/fimcosite/templates/ivan.html
+++ b/fimco/fimcosite/templates/ivan.html
@@ -13,28 +13,15 @@
         </div>
     </section>
 
-{#    <section class="page-header page-header-2xlg parallax parallax-4" style="background-image:url('/static/img/ivan.jpg')">#}
-{#        <div class="overlay dark-2"><!-- dark overlay [1 to 9 opacity] --></div>#}
-{#        <div class="container">#}
-{#            <h1 class="fs-40">Ivan Tarimo</h1>#}
-{#            <span class="font-lato fs-18 fw-300">Director</span>#}
-{#        </div>#}
-{#    </section>#}
-
     <section>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-centered">
-{#                    <div class="card card-default">#}
-{#                        <div class="card-block">#}
-{#                            <img class="img-fluid" src="/static/img/ivan.jpg">#}
-{#                        </div>#}
-{#                    </div>#}
+            <div class="row hidden-md-down">
+                <div class="col-lg-6 col-centered">
                     <div class="frame">
                         <img class="img-fluid" src="/static/img/ivan.jpg">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-6">
                     <div class="callout alert alert-border">
                         <header class="text-center mb-10">
                             <h3>BIOGRAPHY</h3>
@@ -54,28 +41,25 @@
                     </div>
                 </div>
             </div>
-{#            <br>#}
-{#            <div class="row">#}
-{#                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-centered">#}
-{#                    <div class="callout alert alert-border">#}
-{#                        <header class="text-center mb-10">#}
-{#                            <h3>BIOGRAPHY</h3>#}
-{#                            <p class="fw-300 fs-18 mt-10">#}
-{#                                Ivan has over 10 years’ experience in the financial services industry particularly financial Markets.#}
-{#                                He started his banking career at Standard Chartered as Global Markets Graduate Trainee in 2007.#}
-{#                                He is an economist with an MSc Finance and Economics from Warwick Business School.#}
-{#                                He also is a Certified Financial Markets Dealer by ACI Financial Markets.#}
-{#                                His experience in banking includes roles as Heading Treasury at NBC as well as Head of Global Markets at Stanbic.#}
-{#                                He has also served market development as President of the ACI Tanzania chapter 2013 to 2015#}
-{#                                and also as a secretary to the Tanzanian Banking Association’s Financial Market Deepening and Development committee.#}
-{#                                Ivan is passionate about innovation and applying fresh thinking to solving challenges faced by business and banks.#}
-{#                            </p>#}
-{#                        </header>#}
-{##}
-{#                        <hr class="mb-100" />#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
+            <div class="row hidden-lg-up">
+                <div class="col-md-12">
+                    <img class="float-left hidden-xs-down" src="/static/img/ivan.jpg" height="367" width="275" alt="" />
+                    <img class="float-left hidden-sm-up" src="/static/img/ivan.jpg" height="147" width="110" alt="" />
+                    <div class="heading-title">
+                        <h2>BIOGRAPHY</h2>
+                    </div>
+                    <p class="fw-300 fs-18 mt-10">
+                        Ivan has over 10 years’ experience in the financial services industry particularly financial Markets.
+                        He started his banking career at Standard Chartered as Global Markets Graduate Trainee in 2007.
+                        He is an economist with an MSc Finance and Economics from Warwick Business School.
+                        He also is a Certified Financial Markets Dealer by ACI Financial Markets.
+                        His experience in banking includes roles as Heading Treasury at NBC as well as Head of Global Markets at Stanbic.
+                        He has also served market development as President of the ACI Tanzania chapter 2013 to 2015
+                        and also as a secretary to the Tanzanian Banking Association’s Financial Market Deepening and Development committee.
+                        Ivan is passionate about innovation and applying fresh thinking to solving challenges faced by business and banks.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 {% endblock %}
