--- a/fimco/fimcosite/static/css/slider.css
+++ b/fimco/fimcosite/static/css/slider.css
@@ -1,12 +1,24 @@
 .hero-slider {
     padding: 0;
+    background-color: #fff
 }
 
-.ms-bullets.ms-dir-h {
-    bottom: 0;
+.hero-slider .ms-view {
+    background: 0 0
 }
 
-.hero-slider .ms-bullet {
+.hero-slider .overlay {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    z-index: 2;
+    background: url(../img/rev_slider/overlay-success.png)
+}
+
+.ms-bullet {
     display: inline-block;
     float: none;
     width: 12px;
@@ -17,12 +29,129 @@
     border-radius: 50%;
 }
 
-.hero-slider .ms-bullet-selected {
+.ms-bullet-selected {
     background-color: white;
 }
 
+.ms-bullets.ms-dir-h {
+    bottom: 0;
+}
+
+.ms-nav-next, .ms-nav-prev {
+    width: 32px;
+    height: 38px;
+    cursor: pointer;
+    top: 50%;
+    /*left: 10px;*/
+    left: 5px;
+    margin-top: -19px;
+    position: absolute;
+    z-index: 5;
+    opacity: 1!important;
+    filter: alpha(opacity=100)!important;
+    transition: opacity .3s;
+    display: none;
+}
+
+.ms-nav-next:hover, .ms-nav-prev:hover {
+    opacity: .7!important;
+    filter: alpha(opacity=70)!important
+}
+
+.ms-nav-next {
+    /*right: 10px;*/
+    right: 5px;
+    left: auto
+}
+
+.ms-nav-next:before, .ms-nav-prev:before {
+    font-family: FontAwesome, serif;
+    /*color: #CE2020;*/
+    color: white;
+    font-size: 1.75em
+}
+
+.ms-nav-next:before {
+    content: "\f0a9"
+}
+
+.ms-nav-prev:before {
+    content: "\f0a8"
+}
+
+.ms-slide h2, .ms-slide h4, .ms-slide p {
+    font-family: Raleway, serif;
+    color: white;
+}
+
+.ms-slide p {
+    font-size: 22px!important;
+    line-height: 1.3!important;
+    font-weight: 100;
+}
+
+.ms-slide h2 {
+    line-height: 40px!important;
+    font-weight: 100!important;
+    font-size: 40px!important;
+}
+
+.ms-slide h4 {
+    font-weight: 100!important;
+    font-size: 28px!important;
+}
+
+@media only screen and (min-width:768px) and (max-width: 992px) {
+
+}
+
+@media only screen and (min-width:544px) and (max-width: 768px) {
+    .ms-slide p {
+        font-size: 16px!important;
+        line-height: 1.3!important;
+    }
+
+    .ms-slide h2 {
+        line-height: 28px!important;
+        font-size: 26px!important;
+    }
+
+    .ms-slide h4 {
+        font-size: 18px!important;
+    }
+
+    .tp-static-layers {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
 @media only screen and (max-width: 482px) {
+    .ms-slide p {
+        font-size: 10px!important;
+        line-height: 1.2!important;
+    }
+
+    .ms-slide h2 {
+        line-height: 16px!important;
+        font-size: 16px!important;
+    }
+
+    .ms-slide h4 {
+        font-size: 12px!important;
+        line-height: 12px!important;
+    }
+
     .ms-bullets-count {
         display: none;
+    }
+
+    .ms-nav-prev, .ms-nav-next {
+        width: 22px!important;
+        height: 28px!important;
+        display: block;
     }
 }
