--- a/fimco/fimcosite/templates/lawrence.html
+++ b/fimco/fimcosite/templates/lawrence.html
@@ -13,71 +13,15 @@
         </div>
     </section>
 
-{#    <section class="page-header page-header-2xlg parallax parallax-4" style="background-image:url('/static/img/mafuru.jpg')">#}
-{#        <div class="overlay dark-2"><!-- dark overlay [1 to 9 opacity] --></div>#}
-{#        <div class="container">#}
-{#            <h1 class="fs-40">Lawrence Mafuru</h1>#}
-{#            <span class="font-lato fs-18 fw-300">Chairman</span>#}
-{#        </div>#}
-{#    </section>#}
-
-{#    <div class="callout callout-dark">#}
-{#        <div class="container">#}
-{#            #}
-{#            <div class="row">#}
-{##}
-{#                <div class="col-md-9 col-sm-12"><!-- left text -->#}
-{#                    <h3>Chairman at FIMCO</h3>#}
-{#                    <p class="font-lato fw-300 fs-20 mb-0">#}
-{#								I truly care about all of my clients.#}
-{#                    </p>#}
-{#                </div><!-- /left text -->#}
-{##}
-{##}
-{#                <div class="col-md-3 col-sm-12 text-right"><!-- right btn -->#}
-{#                    <div class="mt-10">#}
-{#                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">#}
-{#                            <i class="icon-facebook"></i>#}
-{#                            <i class="icon-facebook"></i>#}
-{#                        </a>#}
-{##}
-{#                        <a href="#" class="social-icon social-icon-border social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">#}
-{#                            <i class="icon-twitter"></i>#}
-{#                            <i class="icon-twitter"></i>#}
-{#                        </a>#}
-{##}
-{#                        <a href="#" class="social-icon social-icon-border social-gplus" data-toggle="tooltip" data-placement="top" title="Google plus">#}
-{#                            <i class="icon-gplus"></i>#}
-{#                            <i class="icon-gplus"></i>#}
-{#                        </a>#}
-{##}
-{#                        <a href="#" class="social-icon social-icon-border social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">#}
-{#                            <i class="icon-linkedin"></i>#}
-{#                            <i class="icon-linkedin"></i>#}
-{#                        </a>#}
-{#                    </div>#}
-{#                </div><!-- /right btn -->#}
-{##}
-{#            </div>#}
-{##}
-{#        </div>#}
-{#    </div>#}
-    <!-- /CALLOUT -->
-
     <section>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-centered">
-{#                    <div class="card card-default">#}
-{#                        <div class="card-block">#}
-{#                            <img class="img-fluid" src="/static/img/mafuru.jpg">#}
-{#                        </div>#}
-{#                    </div>#}
+            <div class="row hidden-md-down">
+                <div class="col-lg-6 col-centered">
                     <div class="frame">
                         <img class="img-fluid" src="/static/img/mafuru.jpg">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-6">
                     <div class="callout alert alert-border">
                         <header class="text-center mb-10">
                             <h3>BIOGRAPHY</h3>
@@ -99,30 +43,27 @@
                     </div>
                 </div>
             </div>
-{#            <br>#}
-{#            <div class="row">#}
-{#                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-centered">#}
-{#                    <div class="callout alert alert-border">#}
-{#                        <header class="text-center mb-10">#}
-{#                            <h3>BIOGRAPHY</h3>#}
-{#                            <p class="fw-300 fs-18 mt-10">#}
-{#                                Lawrence is a seasoned Certified Chartered Banker from the Chartered Institute of Bankers#}
-{#                                London and a Certified Financial Markets Dealer by ACI Financial Markets.#}
-{#                                He holds an Executive MBA Finance from University of Dar es Salaam Business school.#}
-{#                                His varied experience in the industry over the last 19 years includes roles as#}
-{#                                Head of Treasury (NBC), CEO (NBC) and Chairman of the Tanzanian Bankers Association.#}
-{#                                Lawrence has also worked on the public side extensively as the Treasury Registrar at the#}
-{#                                ministry of finance and also for the Presidential Delivery Bureau as Director of resource mobilisation.#}
-{#                                A noticeable figure and sought after speaker on matters related to banking and finance,#}
-{#                                public and private, Lawrence brings to Bankable his vast experience and expertise to achieving#}
-{#                                our mission and vision. Lawrence is passionate about driving client value through shared insights.#}
-{#                            </p>#}
-{#                        </header>#}
-{##}
-{#                        <hr class="mb-100" />#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
+            <div class="row hidden-lg-up">
+                <div class="col-md-12">
+                    <img class="float-left hidden-xs-down" src="/static/img/mafuru.jpg" height="367" width="275" alt="" />
+                    <img class="float-left hidden-sm-up" src="/static/img/mafuru.jpg" height="147" width="110" alt="" />
+                    <div class="heading-title">
+                        <h2>BIOGRAPHY</h2>
+                    </div>
+                    <p class="fw-300 fs-18 mt-10">
+                        Lawrence is a seasoned Certified Chartered Banker from the Chartered Institute of Bankers
+                        London and a Certified Financial Markets Dealer by ACI Financial Markets.
+                        He holds an Executive MBA Finance from University of Dar es Salaam Business school.
+                        His varied experience in the industry over the last 19 years includes roles as
+                        Head of Treasury (NBC), CEO (NBC) and Chairman of the Tanzanian Bankers Association.
+                        Lawrence has also worked on the public side extensively as the Treasury Registrar at the
+                        ministry of finance and also for the Presidential Delivery Bureau as Director of resource mobilisation.
+                        A noticeable figure and sought after speaker on matters related to banking and finance,
+                        public and private, Lawrence brings to Bankable his vast experience and expertise to achieving
+                        our mission and vision. Lawrence is passionate about driving client value through shared insights.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 {% endblock %}
